Fix #67 adjust the width of the right panel on small screens.

--- a/client/styles/sass/style.scss
+++ b/client/styles/sass/style.scss
@@ -141,7 +141,7 @@ body > ui-view {
 }
 
 md-sidenav.sidenav-chatroom {
-  min-width: 600px;
+  min-width: 25%;
 }
 
 .main-content-container {
